Added ability to remove theme items.

--- a/src/assets/styles/components/_all.scss
+++ b/src/assets/styles/components/_all.scss
@@ -2,3 +2,5 @@
 @import "components.swatch";
 @import "components.site";
 @import "components.tabs";
+@import "components.btn";
+@import "components.theme-mapping";
