--- a/src/assets/styles/components/_components.tabs.scss
+++ b/src/assets/styles/components/_components.tabs.scss
@@ -3,6 +3,11 @@
   flex-wrap: wrap;
   background: color('white');
 
+  &__close {
+    @extend .c-btn--ui;
+    z-index: $z-local-mid;
+  }
+
   &__tab {
     align-items: center;
     border: solid 2px color('theme-base');
@@ -10,6 +15,7 @@
     flex: 1 0 auto;
     padding: $space-s;
     text-align: center;
+    justify-content: space-between;
 
     &:first-child {
       border-top-left-radius: $space-s;
@@ -23,6 +29,10 @@
 
       a:focus {
         outline-color: color('theme-primary');
+      }
+
+      .c-tabs__close {
+        color: color('white');
       }
     }
 
