--- a/src/assets/styles/components/_components.swatch.scss
+++ b/src/assets/styles/components/_components.swatch.scss
@@ -1,7 +1,15 @@
 .c-swatch {
-  box-shadow: 0 0 5px 0 rgba(#303030, 0.3);
+  box-shadow: 0 0 5px 0 rgba($color-base-black, 0.3);
   margin-bottom: $space-s;
   width: 10rem;
+  position: relative;
+
+  &__quick-select-trigger {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: $z-local-top;
+  }
 
   &__color {
     height: 0px;
